Fixed navbar y overlap

--- a/assets/css/navbar.css
+++ b/assets/css/navbar.css
@@ -22,6 +22,7 @@ nav {
   top: 0;
   left: 0;
   width: 100%;
+  z-index: 9999;
 }
 
 nav ul {
